src/content/docs/liberica-nik/21.0.6b10/install-guide.mdx
---
title: "Liberica NIK 21: Installation Guide"
slug: liberica-nik/21.0.6b10/install-guide
prev: false
description: Install Liberica Native Image Kit 23.1.6+1 (21.0.6+10, bundling Java 21 LTS) on macOS, Linux, Alpine Linux, and Windows — DMG/PKG/MSI installers, DEB/RPM/APK packages, standalone archives, language packages via the gu updater, and checksum verification.
---

import { Tabs, TabItem, Steps, Aside } from '@astrojs/starlight/components';

This document provides installation instructions for Liberica Native Image Kit (NIK) 23.1.6+1 (21.0.6+10) on different operating systems.

You can download Liberica NIK from either the [Liberica JDK Download Center](https://bell-sw.com/pages/downloads/) or, as a support-plan customer, via a link on the [support portal](https://bell-sw.com/support/). After you log in to the support portal, you can see a direct link to the version of the Liberica product you requested under **Technologies**. If you use the Liberica Download Center page, scroll down and select the NIK version, OS, and [package type](/bellsoft-docs/liberica-jdk/21.0.6b10/how-to/choosing-flavor/). After the download is finished, you can [verify](#verifying-downloaded-files) the downloaded file by comparing its size on your drive to the size on the Downloads page.

<Aside type="note">
The installer screens are provided for information purposes only and may vary in different releases.
</Aside>

Pick your platform below — your choice is remembered as you scroll and when you switch versions.

<Tabs syncKey="os">
<TabItem label="macOS" icon="apple">

## Apple macOS

Choose an installation method:

<Tabs>
<TabItem label="Installer (.dmg)">

### Installing the DMG bundle on macOS

<Steps>

1. To run the installer, double-click the file you have downloaded.

2. Double-click the pkg icon to open the **Install Liberica NIK** Wizard.

3. Click **Continue** on the **Welcome** screen.

4. Optionally, you can change the installation location. Press **Install** to proceed.

5. Confirm the new software installation. The files will start copying immediately.

6. Once the installation is complete, press **Close** to exit the installation wizard.

</Steps>

Liberica NIK 23.1.6 is installed to the `/Library/Java/LibericaNativeImageKit/liberica-vm-23.1.6-openjdk21/` directory, or another directory with a similar name in `/Library/Java/LibericaNativeImageKit`, depending on the selected version of the JDK and package type (core, standard, or full). You can use the `$NIK_HOME` environment variable to store the path to the installed package: `/Library/Java/LibericaNativeImageKit/liberica-vm-23.1.6-openjdk21/Contents/Home/`.

</TabItem>
<TabItem label="Archive (.zip)">

### Installing the ZIP bundle on macOS

<Steps>

1. To install Liberica NIK, download the `.zip` package.

   ```bash
   curl -O https://download.bell-sw.com/vm/23.1.6/bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-macos-amd64.zip
   ```

2. After the download is finished, unpack the file.

   ```bash
   unzip bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-macos-amd64.zip
   sudo mv bellsoft-liberica-vm-openjdk21-23.1.6 /Library/Java/LibericaNativeImageKit/
   ```

   This unpacks Liberica NIK to `/Library/Java/LibericaNativeImageKit/`. Either add the `Contents/Home/bin` subdirectory to `$PATH`, or remember `/Library/Java/LibericaNativeImageKit/bellsoft-liberica-vm-openjdk21-23.1.6/Contents/Home/` as the `$NIK_HOME` environment variable.

</Steps>

To uninstall Liberica NIK, simply remove its directory and unset the related environment variables.

</TabItem>
<TabItem label="SDKMAN!">

### Installing with SDKMAN!

[SDKMAN!](https://sdkman.io/) installs Liberica NIK as a Java candidate (the `-nik` suffix), on macOS and Linux. Run `sdk list java | grep nik` to find the current Liberica NIK identifier for JDK 21, then install it:

```bash
sdk install java <identifier-from-the-list>
```

</TabItem>
</Tabs>

### Installing language packages on macOS

Except for the Core version (which comes bundled with the native image plugin and does not allow the installation of additional components), all packages of Liberica Native Image Kit contain a component updater called `gu`. You can use it to install or update Liberica NIK plugins or add support for additional languages in the distribution.

Open the terminal and type:

```bash
$NIK_HOME/bin/gu available
```

You'll see a list of available languages:

```text
Downloading: Component catalog from download.bell-sw.com
ComponentId    Version  Component name      Stability    Origin
-----------------------------------------------------------------------------
icu4j          23.1.6   ICU4J               Supported    download.bell-sw.com
js             23.1.6   Graal.js            Supported    download.bell-sw.com
llvm           23.1.6   LLVM Runtime Core   Supported    download.bell-sw.com
llvm-toolchain 23.1.6   LLVM.org toolchain  Supported    download.bell-sw.com
nodejs         23.1.6   Graal.nodejs        Supported    download.bell-sw.com
python         23.1.6   GraalVM Python      Experimental download.bell-sw.com
R              23.1.6   FastR               Experimental download.bell-sw.com
regex          23.1.6   TRegex              Supported    download.bell-sw.com
ruby           23.1.6   TruffleRuby         Experimental download.bell-sw.com
wasm           23.1.6   GraalWasm           Experimental download.bell-sw.com
```

Execute `$NIK_HOME/bin/gu install [language]` to install a specific language. For example, `$NIK_HOME/bin/gu install python`.

This can also be executed manually:

```bash
curl -O https://download.bell-sw.com/vm/23.1.6/python-installable-openjdk21.0.6+10-23.1.6+1-macos-amd64.jar
$NIK_HOME/bin/gu -L install python-installable-openjdk21.0.6+10-23.1.6+1-macos-amd64.jar
```

<Aside type="caution">
If Liberica Native Image Kit was installed in `/Library/Java/LibericaNativeImageKit` or another location requiring root privileges, you might have to use `sudo` to perform administrative tasks, such as installing additional components or rebuilding the images.
</Aside>

### Liberica NIK dependencies on macOS

<Aside type="caution">
`xcode` is required for Liberica Native Image Kit.
</Aside>

Install the necessary tools with the following command:

```bash
xcode-select --install
```

</TabItem>
<TabItem label="Linux" icon="linux">

## Linux

Choose an installation method:

<Tabs>
<TabItem label="DEB / RPM">

### Installing DEB and RPM packages

Download either the `.rpm` or `.deb` package, then install it using the appropriate package manager.

For an Apt-based system:

```bash
sudo apt install ./bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-amd64.deb
```

Or for an RPM-based system:

```bash
sudo yum install ./bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-amd64.rpm
```

The package is installed to `/opt/bellsoft/liberica-vm-23.1.6-openjdk21/`.

For scripting purposes, we recommend adding the `${NIK_HOME}` environment variable that points to your Liberica Native Image Kit installation directory.

</TabItem>
<TabItem label="Archive (.tar.gz)">

### Installing the standalone NIK package on GNU/Linux

<Steps>

1. To install Liberica NIK, download the `.tar.gz` package and unpack it with the following commands:

   ```bash
   export INSTALL_DIR=<your directory>
   tar -C $INSTALL_DIR -xzf bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-amd64.tar.gz
   ```

2. This unpacks Liberica NIK to the selected directory. Either add `$INSTALL_DIR/bellsoft-liberica-vm-openjdk21-23.1.6/bin` to `$PATH`, or remember `$INSTALL_DIR/bellsoft-liberica-vm-openjdk21-23.1.6` as the `$NIK_HOME` environment variable.

</Steps>

To uninstall Liberica NIK, simply remove this directory and unset the related environment variables.

</TabItem>
<TabItem label="SDKMAN!">

### Installing with SDKMAN!

[SDKMAN!](https://sdkman.io/) installs Liberica NIK as a Java candidate (the `-nik` suffix). Run `sdk list java | grep nik` to find the current Liberica NIK identifier for JDK 21, then install it:

```bash
sdk install java <identifier-from-the-list>
```

</TabItem>
</Tabs>

### Installing language packages on Linux

Open the terminal and type:

```bash
$NIK_HOME/bin/gu available
```

You'll see a list of available languages:

```text
Downloading: Component catalog from download.bell-sw.com
ComponentId    Version  Component name      Stability    Origin
-----------------------------------------------------------------------------
icu4j          23.1.6   ICU4J               Supported    download.bell-sw.com
js             23.1.6   Graal.js            Supported    download.bell-sw.com
llvm           23.1.6   LLVM Runtime Core   Supported    download.bell-sw.com
llvm-toolchain 23.1.6   LLVM.org toolchain  Supported    download.bell-sw.com
nodejs         23.1.6   Graal.nodejs        Supported    download.bell-sw.com
python         23.1.6   GraalVM Python      Experimental download.bell-sw.com
R              23.1.6   FastR               Experimental download.bell-sw.com
regex          23.1.6   TRegex              Supported    download.bell-sw.com
ruby           23.1.6   TruffleRuby         Experimental download.bell-sw.com
wasm           23.1.6   GraalWasm           Experimental download.bell-sw.com
```

Execute `$NIK_HOME/bin/gu install [language]` to install a specific language. For example, `$NIK_HOME/bin/gu install python`.

This can also be executed manually:

```bash
wget https://download.bell-sw.com/vm/23.1.6/python-installable-openjdk21.0.6+10-23.1.6+1-linux-amd64.jar
$NIK_HOME/bin/gu -L install python-installable-openjdk21.0.6+10-23.1.6+1-linux-amd64.jar
```

<Aside type="caution">
If Liberica Native Image Kit was installed via a package manager or in a location requiring root privileges, you might have to use `sudo` to perform administrative tasks, such as installing additional components or rebuilding the images.
</Aside>

### Liberica NIK dependencies on Linux

Several libraries are required for Liberica Native Image Kit on Linux systems. Install these libraries on Debian-based systems with the following command:

```bash
sudo apt install g++ make zlib1g-dev
```

<Aside type="note">
Installed components also have additional library dependencies. For example, `Truffleruby` depends on `libssl-dev`.
</Aside>

You can use a similar command to install dependencies on RPM-based systems. See this example for CentOS:

```bash
sudo yum install gcc-c++ make zlib-devel
```

Other types of Linux systems may require different packages.

</TabItem>
<TabItem label="Alpine Linux" icon="linux">

## Alpine Linux

Choose an installation method:

<Tabs>
<TabItem label="APK">

### Installing the APK package on Alpine Linux

Download the `.apk` package, then install it using the appropriate package manager:

```bash
# Add public key to check signature
wget -P /etc/apk/keys/ https://apk.bell-sw.com/[email protected]
# Install package
sudo apk add ./bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-x64-musl.apk
```

The package is installed to `/opt/bellsoft/liberica-vm-23.1.6-openjdk21/`.

For scripting purposes, we recommend adding the `${NIK_HOME}` environment variable that points to your Liberica Native Image Kit installation directory.

</TabItem>
<TabItem label="Archive (.tar.gz)">

### Installing the standalone NIK package on Alpine Linux

<Steps>

1. To install Liberica NIK, download the `.tar.gz` package:

   ```bash
   wget https://download.bell-sw.com/vm/23.1.6/bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-x64-musl.tar.gz
   ```

2. Unpack it with the following command:

   ```bash
   export INSTALL_DIR=<your directory>
   tar -C $INSTALL_DIR -xzf bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-x64-musl.tar.gz
   ```

   This unpacks Liberica NIK to the selected directory. Either add `$INSTALL_DIR/bellsoft-liberica-vm-openjdk21-23.1.6/bin` to `$PATH`, or remember `$INSTALL_DIR/bellsoft-liberica-vm-openjdk21-23.1.6` as the `$NIK_HOME` environment variable.

</Steps>

To uninstall Liberica NIK, simply remove this directory and unset the related environment variables.

</TabItem>
</Tabs>

### Installing language packages on Alpine Linux

Open the terminal and type:

```bash
$NIK_HOME/bin/gu available
```

You'll see a list of available languages:

```text
Downloading: Component catalog from download.bell-sw.com
ComponentId    Version  Component name      Stability    Origin
-----------------------------------------------------------------------------
icu4j          23.1.6   ICU4J               Supported    download.bell-sw.com
js             23.1.6   Graal.js            Supported    download.bell-sw.com
llvm           23.1.6   LLVM Runtime Core   Supported    download.bell-sw.com
llvm-toolchain 23.1.6   LLVM.org toolchain  Supported    download.bell-sw.com
nodejs         23.1.6   Graal.nodejs        Supported    download.bell-sw.com
python         23.1.6   GraalVM Python      Experimental download.bell-sw.com
R              23.1.6   FastR               Experimental download.bell-sw.com
regex          23.1.6   TRegex              Supported    download.bell-sw.com
ruby           23.1.6   TruffleRuby         Experimental download.bell-sw.com
wasm           23.1.6   GraalWasm           Experimental download.bell-sw.com
```

Execute `$NIK_HOME/bin/gu install [language]` to install a specific language. For example, `$NIK_HOME/bin/gu install python`.

This can also be executed manually:

```bash
wget https://download.bell-sw.com/vm/23.1.6/python-installable-openjdk21.0.6+10-23.1.6+1-linux-x64-musl.jar
$NIK_HOME/bin/gu -L install python-installable-openjdk21.0.6+10-23.1.6+1-linux-x64-musl.jar
```

<Aside type="caution">
If Liberica Native Image Kit was installed via a package manager or in a location requiring root privileges, you might have to use `sudo` to perform administrative tasks, such as installing additional components or rebuilding the images.
</Aside>

### Liberica NIK dependencies on Alpine Linux

Several libraries are required for Liberica Native Image Kit on Alpine Linux. Install these libraries with the following command:

```bash
sudo apk add bash g++ make zlib-static
```

<Aside type="note">
Installed components also have additional library dependencies. For example, `Truffleruby` depends on `openssl-dev`.
</Aside>

</TabItem>
<TabItem label="Windows" icon="seti:windows">

## Microsoft Windows

Choose an installation method:

<Tabs>
<TabItem label="Installer (.msi)">

### Installing with the Microsoft Windows Installer package

<Steps>

1. Double-click the Windows installation file you downloaded. The **Liberica NIK Setup** Wizard opens.

2. Click **Next** on the **Welcome** screen.

3. On the **Custom Setup** window, choose the features you need. Select a feature to see its description. In most cases, you can use the default setup. Click **Disk Usage** to see the available and required space on your disk. Click **Next**.

4. The package is ready to install. Press **Install**. If you see the User Account Control warning, verify the publisher (BELLSOFT) and click **Yes**.

5. After the installation is complete, click **Finish** to quit the **Liberica NIK Setup** Wizard.

</Steps>

<Aside type="note">
The installer screens above may vary in different releases.
</Aside>

If you want to install Liberica NIK silently, open the command line and run the following command:

```powershell
msiexec /quiet /i bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-windows-amd64.msi
```

Liberica NIK is installed to the `C:\Program Files\BellSoft\LibericaNIK-23-OpenJDK-21` directory by default. For scripting purposes, we recommend adding the `$NIK_HOME` environment variable that points to your Liberica Native Image Kit installation directory.

</TabItem>
<TabItem label="Archive (.zip)">

### Installing the standalone package on Microsoft Windows

To install Liberica NIK as a standalone package on your computer, download the `.zip` package file and unpack it to a folder. You can also use Windows PowerShell to download and unpack the zip file as follows:

```powershell
Invoke-WebRequest "https://download.bell-sw.com/vm/23.1.6/bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-windows-amd64.zip"
Expand-Archive bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-windows-amd64.zip -DestinationPath .
```

This unpacks Liberica NIK to the current directory. Either add the `bin` subdirectory to `PATH`, or remember this directory as the `$NIK_HOME` environment variable.

</TabItem>
<TabItem label="winget">

### Installing with winget

[winget](https://learn.microsoft.com/windows/package-manager/) carries Liberica NIK for JDK 21 (the NIK 23 line):

```powershell
winget install -e --id BellSoft.LibericaNIK.23.JDK21
```

Append `--version <build>` to pin a specific build; run `winget show BellSoft.LibericaNIK.23.JDK21` for available versions.

</TabItem>
</Tabs>

### Installing language packages on Windows

Open the command prompt and type:

```powershell
"%NIK_HOME%\bin\gu.cmd" available
```

You'll see a list of available languages:

```text
Downloading: Component catalog from download.bell-sw.com
ComponentId    Version  Component name      Stability    Origin
-----------------------------------------------------------------------------
icu4j          23.1.6   ICU4J               Supported    download.bell-sw.com
js             23.1.6   Graal.js            Supported    download.bell-sw.com
llvm           23.1.6   LLVM Runtime Core   Supported    download.bell-sw.com
llvm-toolchain 23.1.6   LLVM.org toolchain  Supported    download.bell-sw.com
nodejs         23.1.6   Graal.nodejs        Supported    download.bell-sw.com
regex          23.1.6   TRegex              Supported    download.bell-sw.com
wasm           23.1.6   GraalWasm           Experimental download.bell-sw.com
```

Execute `"%NIK_HOME%\bin\gu.cmd" install [language]` to install a specific language. For example, `"%NIK_HOME%\bin\gu.cmd" install nodejs`.

### Liberica NIK dependencies on Windows

<Aside type="caution">
Microsoft Visual Studio 2017 with Microsoft Visual C++ (MSVC) 15 or later is required for Liberica Native Image Kit.
</Aside>

Start the `x64 Native Tools Command Prompt` to allow `native-image` and other utilities to find the development tools and work from the command prompt.

</TabItem>
</Tabs>

## Verifying downloaded files

It is a good practice to verify the downloaded installation file by comparing its size on your drive to the size on the [Downloads](https://bell-sw.com/pages/downloads/) page.

A more advanced approach is to obtain the checksum of the downloaded file in a command-line interface and compare it to the one you can find next to the Liberica NIK link on the [Downloads](https://bell-sw.com/pages/downloads/) page. Check the OS-specific commands below.

<Tabs syncKey="os">
<TabItem label="macOS" icon="apple">

To get the checksum of the downloaded file, use the following command:

```bash
shasum -a 1 bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-macos-amd64.dmg
```

</TabItem>
<TabItem label="Linux" icon="linux">

To get the checksum of the downloaded file, use the following command. The installation file extension depends on the Linux version.

```bash
shasum -a 1 bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-linux-amd64.deb
```

</TabItem>
<TabItem label="Windows" icon="seti:windows">

To get the checksum of the downloaded file in the command line, run the following command in Windows PowerShell. To run PowerShell, open the **Start** menu or press the Windows key + R, type `powershell` in the **Run** dialog box, and click **OK**.

```powershell
(Get-FileHash .\bellsoft-liberica-vm-openjdk21.0.6+10-23.1.6+1-windows-amd64.msi -Algorithm SHA1).Hash
```

</TabItem>
</Tabs>
